# pe

./: .gitignore  LICENSE  README.md  build.sbt  project.clj  wip.scala
pe-solution/: build.sbt
pe-solution/src/main/python/: PEP_001 Multiples of 3 and 5.ipynb  PEP_208 Robot Walks.ipynb  PEP_220 Heighway Dragon.ipynb  Pipfile  common.py  pep_205.py  pep_206.py  pep_243.py  pep_387.py  pep_684.py  pep_686.py  pep_700.py  pep_719.py  pep_745.py  pep_751.py  pyproject.toml
pe-solution/src/main/python/.hypothesis/examples/711c5a4735925f21/: ba662d2e0a025f3d
pe-solution/src/main/python/hackerrank/: breaking-best-and-worst-records.py
pep-004/: solution1.clj
pep-005/: solution1.clj
pep-006/: solution1.clj  wip.clj
project/: Build.scala  Modules.scala  Publishing.scala  Settings.scala  plugins.sbt
resources/pep_395/: index.html
src/: Main.scala
src/pep-004/: wip.clj
src/pep-005/: wip.clj
src/pep-007/: solution1.clj  wip.clj
src/pep-008/: solution1.clj  wip.clj
src/pep-009/: solution1.clj  wip.clj
src/pep-010/: solution1.clj  wip.clj
src/pep-011/: solution1.clj  wip.clj
src/pep-012/: solution1.clj  wip.clj
src/pep-013/: solution1.clj
src/pep-014/: solution1.clj  wip.clj
src/pep-015/: solution1.clj
src/pep-016/: solution1.clj  wip.clj
src/pep_006/: solution1.clj  wip.clj
src/pep_007/: wip.clj
src/pep_008/: solution1.clj
src/pep_009/: solution1.clj  wip.clj
src/pep_011/: solution1.clj
src/pep_012/: solution1.clj
src/pep_013/: solution1.clj
src/pep_014/: solution1.clj
src/pep_015/: solution1.clj
src/pep_016/: solution1.clj  (+1 more)
(+227 files in other folders)
